# androidplayer

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wilbert/androidplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wilbert/androidplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wilbert/androidplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/androidTest/java/com/wilbert/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: CMakeLists.txt  cgeCommonDefine.cpp  cgeGLFunctions.cpp  cgeGlobal.cpp  cgePlatform_ANDROID.h  cgeShaderFunctions.cpp  cgeVideoDecoder.cpp  native-lib.cpp  svVideoPlayer.cpp
player/src/main/cpp/include/: cgeFFmpegHeaders.h  cgeGLFunctions.h  cgeShaderFunctions.h  svVideoPlayer.h
player/src/main/java/com/wilbert/player/: JniVideoPlayer.java  NativeLibraryLoader.java  PlayerActivity.java
player/src/main/res/layout/: activity_player.xml
player/src/test/java/com/wilbert/player/: ExampleUnitTest.java
